--- a/index.html
+++ b/index.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
-<html lang="es-VLZ">
+<html lang="es">
 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academia Wanda</title>
+		<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="stylesheet" type="text/css" href="./style.css">
 	</head>
 	<body>
 		<div class="opening">
-			<img src="./image/opening.jpg" alt="Apertura">
-			<img src="./image/isologo.svg" alt="Isologo - Academia Wanda">
+			<img src="./image/vector/isologo_white.svg" alt="Isologo - Academia Wanda">
 		</div>
 		<div class="ctn_box">
 			<div class="notice">
-				<p>⚠ ¡IMPORTANTE! ⚠</p>
 				<p>🔥 Inscripciones abiertas 🔥</p>
+				<p>⚠ ¡IMPORTANTE! ⚠</p>
 			</div>
 			<div class="social_media">
 				<div>
 					<h3>Redes Sociales</h3>
 				</div>
-				<div>
-					<img src="./image/instagram.svg" alt="Instagram">
-					<p>@studioswanda</p>
-				</div>
-				<div>
-					<img src="./image/facebook.svg" alt="Facebook">
-					<p>Academia Wanda</p>
-				</div>
-				<div>
-					<img src="./image/tiktok.svg" alt="TikTok">
-					<p>¿---?</p>
-				</div>
+				<a href="./index.html">
+					<img src="./image/vector/instagram_ff1aac.svg" alt="Instagram">
+					<div class="id_sm">
+						<span>@studioswanda</span>
+					</div>
+				</a>
+				<a href="./index.html">
+					<img src="./image/vector/facebook_ff1aac.svg" alt="Facebook">
+					<div class="id_sm">
+						<span>Academia Wanda</span>
+					</div>
+				</a>
+				<a href="./index.html">
+					<img src="./image/vector/tiktok_ff1aac.svg" alt="TikTok">
+					<div class="id_sm">
+						<span>¿---?</span>
+					</div>
+				</a>
 			</div>
-			<div class="contactme">
-				<div>
-					<h3>👉 Contáctanos 👈</h3>
+		</div>
+		<div class="ctn_contact">
+			<div class="title">
+				<h3>👉 Contáctanos 👈</h3>
+			</div>
+			<div class="background">
+				<div class="isotype_box">
+					<img src="./image/vector/isotype_white.svg" class="isotype" alt="Isotipo - Academia Wanda">
+					<div class="name">
+						<p>Academia</p>
+						<p>Wanda</p>
+					</div>
 				</div>
-				<div>
-					<img src="./image/isotype.svg" alt="Isotipo - Academia Wanda">
-				</div>
-				<div>
+				<div class="partner_box">
+					<div class="headmistress">
+						<img src="./image/vector/partner.svg" alt="Pareja de baile">
+					</div>
 					<p>Wanda Peressi</p>
-					<b>+58 416-8719611</b>
+					<div class="phone_number">
+						<img src="./image/vector/whatsapp.svg" alt="WhatsApp">
+						<b>+58 416-8719611</b>
+					</div>
 				</div>
 			</div>
 		</div>
